# solenc

./: .travis.yml  README.md  setup.cfg  setup.py  solenc.py  tests.py
solenc/: __init__.py
tests/: __init__.py  test_solenc.py
