[bumpversion]
current_version = 1.0.2
commit = True
tag = True

[coverage:run]
source = solenc

[pep8]
in-place = True
recursive = True
max-line-length = 100
verbose = 1
exclude = .env

[flake8]
max-line-length = 100
exclude = .env
ignore = E121,E123,E126,E226,E24,E402,E704,W503,W504

[bumpversion:file:setup.py]

[bumpversion:file:solenc/__init__.py]

[bumpversion:file:README.md]

[metadata]
license_file = LICENSE

